# arm_robot

./: .gitignore  package.xml  setup.py
arm_robot/: helloworld.py  motion_controller_node.py  path_planner_node.py
launch/: display.launch.py  main.launch.py  motion_controller.launch.py  path_planner.launch.py
rviz/: default.rviz
urdf/: arm_robot.xacro  pen.xacro  surface.xacro
